--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "tsc": "tsc",
     "tsc-watch": "tsc -w",
     "build": "gulp build",
-    "start": "node build/src/index.js",
+    "start": "gulp build && node build/src/index.js",
     "setup": "npm install & typings install",
     "watch": "nodemon --watch build/src build/src/index.js"
   },
@@ -25,7 +25,8 @@
   "dependencies": {
     "gulp": "^3.9.1",
     "hapi": "^17.1.1",
-    "inert": "^5.0.1"
+    "inert": "^5.0.1",
+    "nconf": "^0.9.1"
   },
   "devDependencies": {
     "@types/node": "^8.0.57",
