Adjustments on settings file.

--- a/src/setting/settings.json
+++ b/src/setting/settings.json
@@ -1,4 +1,6 @@
 {
+    "projectName": "BaseProject",
+    "version": "0.0.1",
     "dev": {
         "database": {
             "connectionString": "https://localhost:5432/test"
