--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "gulp": "^3.9.1",
     "hapi": "^17.1.1",
     "inert": "^5.0.1",
-    "nconf": "^0.9.1"
+    "nconf": "^0.9.1",
+    "pg": "^7.4.0",
+    "reflect-metadata": "^0.1.10",
+    "sequelize": "^4.27.0",
+    "sequelize-typescript": "^0.6.1"
   },
   "devDependencies": {
     "@types/node": "^8.0.57",
