--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
   "author": "Ovídio César",
   "license": "MIT",
   "dependencies": {
-    "@types/minimist": "^1.2.0",
+    "@types/minimist": "1.2.0",
+    "bcryptjs": "2.4.3",
     "boom": "7.3.0",
-    "colors": "^1.3.3",
+    "colors": "1.3.3",
     "hapi": "18.0.0",
     "hapi-auth-jwt2": "8.3.0",
     "hapi-swagger": "9.3.0",
     "inert": "5.1.2",
     "joi": "14.3.1",
+    "jsonwebtoken": "8.4.0",
     "nconf": "0.9.1",
     "pg": "7.4.0",
     "reflect-metadata": "0.1.10",
