--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
   "author": "Ovídio César",
   "license": "MIT",
   "dependencies": {
+    "@hapi/inert": "5.2.0",
     "@types/minimist": "1.2.0",
     "bcryptjs": "2.4.3",
     "boom": "7.3.0",
     "colors": "1.3.3",
     "hapi": "18.0.0",
     "hapi-auth-jwt2": "8.3.0",
-    "hapi-swagger": "9.3.0",
+    "hapi-swagger": "10.0.2",
     "inert": "5.1.2",
     "joi": "14.3.1",
     "jsonwebtoken": "8.4.0",
@@ -45,7 +46,7 @@
   },
   "devDependencies": {
     "@types/node": "8.0.57",
-    "gulp": "^4.0.0",
+    "gulp": "4.0.0",
     "gulp-env": "0.4.0",
     "gulp-mocha": "6.0.0",
     "gulp-rimraf": "0.2.1",
